# rickshaw

./: .gitignore  MUJOCO_LOG.TXT  README.md  mjlab_rickshaw_outline.md  pyproject.toml  rickshaw.urdf  uv.lock.local.20260723151451.bak
src/mjlab_rickshaw/: __init__.py
src/mjlab_rickshaw/asset_zoo/: __init__.py
src/mjlab_rickshaw/asset_zoo/rickshaw/: __init__.py  rickshaw_constants.py
src/mjlab_rickshaw/asset_zoo/rickshaw/xmls/: rickshaw.xml
src/mjlab_rickshaw/task/: __init__.py  terrain.py
src/mjlab_rickshaw/task/config/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlab_rickshaw/task/mdp/: __init__.py  actions.py  commands.py  curriculums.py  frames.py  observations.py  rewards.py  terminations.py
