[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-rickshaw"
version = "0.1.0"
description = "mjlab force-controlled rickshaw velocity-tracking task"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mjlab>=1.5.3",
  "torch==2.11.0+cu128",
]

[project.entry-points."mjlab.tasks"]
mjlab_rickshaw = "mjlab_rickshaw"

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab", rev = "27b86a8d2d38c4f63b9f305317d967e261f802a3" }
torch = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
package = true

[tool.ruff]
src = ["src"]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
